<resources>
    <string name="title">¡Bienvenido!</string>
    <string name="btn_iniciar">¡Empezar!</string>
    <string name="app_name">App divertida</string>
    <string name="canguro">Canguro</string>
    <string name="aprendiendo">¡Aprendamos inglés!</string>
    <string name="animales">Animals</string>
    <string name="colores">Colors</string>
    <string name="numeros">Numbers</string>
    <string name="frutas">Fruits</string>
    <string name="escuchando">Escuchando</string>
    <string name="koala">Koala</string>
    <string name="mono">Monkey</string>
    <string name="serpiente">Snake</string>
    <string name="panda">Panda</string>
    <string name="kanguro">Kangaroo</string>
    <string name="orange">Orange</string>
    <string name="cherries">Cherries</string>
    <string name="strawberry">Strawberry</string>
    <string name="watermelon">Watermelon</string>
    <string name="mango">Mango</string>
    <string name="zero">Zero</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="audio">Audio</string>
    <string name="numbers">Numbers</string>
    <string name="animals">Animals</string>
    <string name="fruits">Fruits</string>
    <string name="colors">Colors</string>
    <string name="aprender">Aprender</string>
    <string name="jugar">Jugar</string>
    <string name="pregunta">Preguntas</string>
</resources>