<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/bg_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:background="@drawable/header_background"
        android:textSize="36sp"
        android:gravity="center"
        android:fontFamily="sans-serif-medium" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        android:elevation="6dp"
        app:srcCompat="@mipmap/estados" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button_selector"
        android:paddingStart="40dp"
        android:paddingTop="16dp"
        android:paddingEnd="40dp"
        android:paddingBottom="16dp"
        android:text="@string/btn_iniciar"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>

