<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    tools:context=".Home">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/aprendiendo"
        android:textColor="#FF6F00"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/containerButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnAnimals"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:focusable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/animales"
                        android:contentDescription="@string/animales"
                        android:onClick="animales"/>

                    <TextView
                        android:text="@string/animales"
                        android:textSize="18sp"
                        android:textColor="#424242"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_height="25sp"
                        android:layout_width="70sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnColors"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:focusable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/colores"
                        android:contentDescription="@string/colores"
                        android:onClick="colors"/>

                    <TextView
                        android:text="@string/colores"
                        android:textSize="18sp"
                        android:textColor="#424242"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_height="25sp"
                        android:layout_width="55sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnNumbers"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:focusable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/numeros"
                        android:contentDescription="@string/numeros"
                        android:onClick="numbers"/>

                    <TextView
                        android:text="@string/numeros"
                        android:textSize="18sp"
                        android:textColor="#424242"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_height="25sp"
                        android:layout_width="75sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnFruits"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:focusable="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/frutas"
                        android:contentDescription="@string/frutas"
                        android:onClick="fruits"/>

                    <TextView
                        android:text="@string/frutas"
                        android:textSize="18sp"
                        android:textColor="#424242"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_height="25sp"
                        android:layout_width="50sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

